refactor: Remove unnecessary import statement in drizzle.config.ts

--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
     "build": "bun build src/http/server.ts",
     "dev": "bun --watch src/http/server.ts",
     "test": "jest",
-    "generate": "drizzle-kit generate"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "drizzle-kit": "^0.24.2"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "studio": "drizzle-kit studio",
+    "generate": "drizzle-kit generate",
+    "migrate": "bun src/db/migrate.ts",
+    "seed": "bun src/db/seed.ts"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/jwt": "^1.1.1",
     "@paralleldrive/cuid2": "^2.2.2",
+    "chalk": "^5.3.0",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.33.0",
     "elysia": "^1.1.12",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.0.1",
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.24.2",
+    "typescript": "^5.6.2"
   }
 }
